add CRUD User and refactoring
