# src/docs/openApi.yaml
@@ -8,19 +8,7 @@ servers:
     description: Development server
 
 paths:
-  /users/list:
-    get:
-      security:
-        - bearerAuth: []
-      tags:
-        - User
-      summary: Get all Users.
-      responses:
-        200:
-          description: Succes
-        500:
-          description: Server error
-  /users/registration:
+  /user/registration:
     post:
       tags:
         - User
@@ -33,27 +21,92 @@ paths:
               $ref: "#/components/schemas/registrationUser"
       responses:
         200:
-          description: Succes
+          description: Succes.
+        201:
+          description: User registered.
+        401:
+          description: User with this email already exists.
         500:
-          description: Server error
-  /users/check-email:
+          description: Server error.
+
+  /user/authorization:
     post:
       tags:
         - User
-      summary: Check email user .
+      summary: Authorization user .
       requestBody:
         required: true
         content:
-          application/x-www-form-urlencoded:
+          application/json:
             schema:
-              $ref: "#/components/schemas/CheckEmail"
+              $ref: "#/components/schemas/authorizationUser"
       responses:
         200:
-          description: Succes
+          description: Succes.
+        201:
+          description: Token created.
+        404:
+          description: No such user exists.
+        400:
+          description: Wrong password.
         500:
-          description: Server error
-  /users/update-password:
+          description: Server error.
+
+  /user/update:
     patch:
+      security:
+        - bearerAuth: []
+      tags:
+        - User
+      summary: Update user data.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/updateUser"
+      responses:
+        200:
+          description: Succes.
+        201:
+          description: User update.
+        401:
+          description: Not authorized.
+        500:
+          description: Server error.
+
+  /user/find:
+    get:
+      security:
+        - bearerAuth: []
+      tags:
+        - User
+      summary: Find user data.
+      responses:
+        200:
+          description: Succes.
+        401:
+          description: Not authorized.
+        500:
+          description: Server error.
+
+  /user/drop:
+    delete:
+      security:
+        - bearerAuth: []
+      tags:
+        - User
+      summary: Delete user.
+      responses:
+        200:
+          description: Succes.
+        401:
+          description: Not authorized.
+        500:
+          description: Server error.
+
+  /user/update-password:
+    put:
       security:
         - bearerAuth: []
       tags:
@@ -67,35 +120,42 @@ paths:
               $ref: "#/components/schemas/updatePassword"
       responses:
         200:
-          description: Succes
+          description: Succes.
+        201:
+          description: Password changed in database.
+        400:
+          description: New passwords do not match or Wrong password.
+        401:
+          description: Not authorized.
         500:
-          description: Server error
-  /users/email-confirmed:
-    get:
-      tags:
-        - User
-      summary: go to the page after confirming the email.
-      responses:
-        200:
-          description: Succes
-        500:
-          description: Server error
-  /users/authorization:
-    post:
-      tags:
-        - User
-      summary: Authorization user .
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/authorizationUser"
-      responses:
-        200:
-          description: Succes
-        500:
-          description: Server error
+          description: Server error.
+  # /user/email-confirmed:
+  #   get:
+  #     tags:
+  #       - User
+  #     summary: go to the page after confirming the email.
+  #     responses:
+  #       200:
+  #         description: Succes
+  #       500:
+  #         description: Server error
+
+  # /user/check-email:
+  #   post:
+  #     tags:
+  #       - User
+  #     summary: Check email user .
+  #     requestBody:
+  #       required: true
+  #       content:
+  #         application/x-www-form-urlencoded:
+  #           schema:
+  #             $ref: "#/components/schemas/CheckEmail"
+  #     responses:
+  #       200:
+  #         description: Succes
+  #       500:
+  #         description: Server error
 
 components:
   securitySchemes:
@@ -106,6 +166,10 @@ components:
   schemas:
     registrationUser:
       type: object
+      additionalProperties: false
+      required:
+        - password
+        - userEmail
       properties:
         firstName:
           type: string
@@ -123,8 +187,46 @@ components:
           type: string
           description: User password
           example: "21dsa"
+
+    authorizationUser:
+      type: object
+      additionalProperties: false
+      required:
+        - password
+        - email
+      properties:
+        email:
+          type: string
+          description: User email
+          example: pete7833@examples.com
+        password:
+          type: string
+          description: Password user.
+          example: 21dsa
+
+    updateUser:
+      type: object
+      additionalProperties: false
+      properties:
+        firstName:
+          type: string
+          description: User first name.
+          example: Yra
+        lastName:
+          type: string
+          description: User last name.
+          example: Stell
+        newEmail:
+          type: string
+          description: New user email.
+          example: pete7833@examples.com
+
     updatePassword:
       type: object
+      required:
+        - oldPassword
+        - newPassword
+        - repeatNewPassword
       properties:
         oldPassword:
           type: string
@@ -138,25 +240,15 @@ components:
           type: string
           description: Repeat new user password
           example: "3232d"
-    CheckEmail:
-      type: object
-      properties:
-        email:
-          type: string
-          description: User email
-          example: pete7833@examples.com
-        code:
-          type: string
-          description: Email verification code.
-          example: YT45
-    authorizationUser:
-      type: object
-      properties:
-        email:
-          type: string
-          description: User email
-          example: pete7833@examples.com
-        password:
-          type: string
-          description: Password user.
-          example: 21dsa
+
+    # CheckEmail:
+    #   type: object
+    #   properties:
+    #     email:
+    #       type: string
+    #       description: User email
+    #       example: pete7833@examples.com
+    #     code:
+    #       type: string
+    #       description: Email verification code.
+    #       example: YT45
