# src/types/user.ts
@@ -1,4 +1,7 @@
-import { type } from "os";
+type MiddelewareAuthDTO = {
+  email: string;
+  id: number;
+};
 
 export type RegistrationDTO = {
   body: {
@@ -9,6 +12,26 @@ export type RegistrationDTO = {
   };
 };
 
+export type AuthorizationDTO = {
+  body: {
+    email: string;
+    password: string;
+  };
+};
+
+export type UpdateUserDTO = {
+  body: { newEmail: string; firstName: string; lastName: string };
+  user: MiddelewareAuthDTO;
+};
+
+export type ListUserDTO = {
+  user: MiddelewareAuthDTO;
+};
+
+export type DropUserDto = {
+  user: MiddelewareAuthDTO;
+};
+
 export type checkEmailDTO = {
   body: {
     email: string;
@@ -16,20 +39,11 @@ export type checkEmailDTO = {
   };
 };
 
-export type AuthorizationDTO = {
-  body: {
-    email: string;
-    password: string;
-  };
-};
 export type UpdatePasswordDTO = {
+  user: MiddelewareAuthDTO;
   body: {
     oldPassword: string;
     newPassword: string;
     repeatNewPassword: string;
-  };
-  user: {
-    email: string;
-    id: number;
   };
 };
